--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:mysecretpassword@localhost:5432/postgres
 IMAGES_BASE_PATH="./data/images"
+MUTATIONS_BASE_PATH="./data/mutations"
