`PAGINATION_PAGE_SIZE` as a new env variable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://postgres:mysecretpassword@localhost:5432/postgres
 IMAGES_BASE_PATH="./data/images"
 MUTATIONS_BASE_PATH="./data/mutations"
+PAGINATION_PAGE_SIZE=64
