--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1.25.0", features = ["full"] }
 sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
 dotenv = "0.15.0"
 ahash = "0.8.3"
+bincode = "1.3.3"
