--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ]
 dotenv = "0.15.0"
 ahash = "0.8.3"
 bincode = "1.3.3"
+futures-util = "0.3.27"
