--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ dotenv = "0.15.0"
 ahash = "0.8.3"
 bincode = "1.3.3"
 futures-util = "0.3.27"
+ts-rs = "6.2.1"
+
+[package.metadata.build-std]
+# set build-std to run cargo test before building
+# generate TypeScript bindings for DTOs
+build-std = ["test"]
